--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <head>
 	<title>Bike Network Web Map!</title>
-	<link rel="stylesheet" href="leaflet.css"/>
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
 	<link rel="stylesheet" href="DVRPCexercise.css"/>
-	<script src="leaflet.js"/></script>
+	<script src="ttp://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"/></script>
 </head>
 
 <body>
