--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
+<!DOCTYPE html>
+
+<html lang="en">
+	    
 <head>
 	<title>Bike Network Web Map!</title>
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
 	<link rel="stylesheet" href="DVRPCexercise.css"/>
-	<script src="ttp://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"/></script>
+	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 </head>
 
 <body>
