--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 	<link rel="stylesheet" href="DVRPCexercise.css"/>
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 </head>
-
+<style>
+	#map{
+		height: 100%;
+		width: 100%;
+	}
 <body>
 	<div id="map"></div>
-	<script src="DVRPCexercise.js"></script>
+	<script src="https://cdn.rawgit.com/beattyre/DVRPCexercise/gh-pages/DVRPCexercise.js"></script>
 </body>
 
 
