--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 	}
 <body>
 	<div id="map"></div>
-	<script src="https://cdn.rawgit.com/beattyre/DVRPCexercise/gh-pages/DVRPCexercise.js"></script>
+	<script>
+	</script>
 </body>
 
 
