--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 	    
 <head>
 	<title>Bike Network Web Map!</title>
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
-	<link rel="stylesheet" href="DVRPCexercise.css"/>
-	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+	<link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
+	<script src="https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 </head>
 <style>
 	#map{
