--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ function initmap() {
   var osmHot = 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png';
   var osmAttributes = 'Tile layers provided by <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>, data supplied by the<a href="www.opendataphilly.org">City of Philadelphia.</a>'
     attribution: osmAttributes,
-    zoomControl: true
+    zoomControl: true,
   });
   map.setView(new L.LatLng(39.9532, -75.1520), 13);
   map.addLayer(osm);
