--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	    
 <head>
 	<title>Bike Network Web Map!</title>
-	<link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet/v1.0.0-rc.1/leaflet.css" />
-	<script src="https://cdn.leafletjs.com/leaflet/v1.0.0-rc.1/leaflet.js"></script>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
+	<script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
 </head>
 <style>
 	#map{
@@ -23,7 +23,6 @@ function initmap() {
   var osmHot = 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png';
   var osmAttributes = 'Tile layers provided by <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>, data supplied by the<a href="www.opendataphilly.org">City of Philadelphia.</a>'
     attribution: osmAttributes,
-    zoomControl: true,
   });
   map.setView(new L.LatLng(39.9532, -75.1520), 13);
   map.addLayer(osm);
