--- a/index.html
+++ b/index.html
@@ -16,16 +16,10 @@
 <body>
 	<div id="map"></div>
 	<script>
-var map;
-function initmap() {
-  map = new L.map('map');
-  // Add basemap from OSM
-  var osmHot = 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png';
-  var osmAttributes = 'Tile layers provided by <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>, data supplied by the<a href="www.opendataphilly.org">City of Philadelphia.</a>'
-  });
-  map.setView(new L.LatLng(39.9532, -75.1520), 13);
-  map.addLayer(osm);
-};
-initmap();
+	var map= L.map('map').setView([39.9532, -75.1520], 15);
+	
+	L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+   	 attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+	}).addTo(map);
 	</script>
 </body>
