--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ var map;
 function initmap() {
   map = new L.map('map');
   // Add basemap from OSM
-  var osmHot = 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png';
+  var osmHot = 'https://{s}.tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png';
   var osmAttributes = 'Tile layers provided by <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>, data supplied by the<a href="www.opendataphilly.org">City of Philadelphia.</a>'
     minZoom: 15,
     maxZoom: 19,
