--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<script>
 	var map= L.map('map').setView([39.9532, -75.1520], 15);
 	
-	L.tileLayer('https://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+	L.tileLayer('https://{s}.tiles.wmflabs.org/bw-mapnik/{z}/{x}/{y}.png', {
    	 attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
 	}).addTo(map);
 	</script>
